# fesutils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  TODO.txt  codecov.yaml  runCoverage.sh
.github/workflows/: build_cmake.yml
CMakeModules/: CodeCoverage.cmake
docs/: bindump_format.md  coverage.md  design_document.odt  dev_todo.md  error_code.md  final_bias_reweight.md  index.md  quick_start.md
docs/design_documents/: list_design_docs.md
docs/usage_examples/: 3D_fes_processing.md  list_usage_examples.md
examples/: CV_fragment_benzene  CV_fragment_meac  HILLS_fragment_meac  HILLS_fragment_piperidine  SHORT_CV_fragment_piperidine  SHORT_GRID_fragment_benzene  SHORT_HILLS_fragment_benzene  benzene_raw_hills.dx  fragment_info.yaml  fragment_reconstruction.yaml  fragment_reconstruction_short.yaml  meac_raw_hills.dx  piperidine_raw_hills.dx  systemtest_load_fes_data.yaml
src/: GeneralOptions.cpp  GeneralOptions.h  cli_frontend.cpp  entrypoint.cpp  frontend_common.cpp  frontend_common.h  log_utils.hpp  main.rs
src/block_analysis/: cv_space_coverage.cpp  cv_space_coverage.hpp
src/common/: NotImplementedError.cpp  NotImplementedError.hpp  conversions.hpp  dummy_sink_node.hpp  extract_from_string.cpp  extract_from_string.hpp  find_in_search_directory.cpp  find_in_search_directory.hpp  fs_utils.cpp  fs_utils.hpp  graph_node_type.hpp  limiter_decrementer_node.hpp  print_lines_node.cpp  print_lines_node.hpp  yaml_utils.cpp  yaml_utils.hpp
src/error_block/: mod.rs
src/export/: array_bindump.cpp  array_bindump.hpp  simple_opendx.cpp  simple_opendx.hpp
src/fes_grid_parser/: mod.rs  unit_tests.rs
src/file_reader/: PlumedDatHeader.cpp  PlumedDatHeader.hpp  field_function_heuristics.cpp  field_function_heuristics.hpp  parse_space_separated_values_node.cpp  parse_space_separated_values_node.hpp  read_file.cpp  read_file.hpp  read_file_header.cpp  read_file_header.hpp
src/file_reader/cv_file/: CVData.cpp  CVData.hpp  CVData_filler_node.cpp  CVData_filler_node.hpp  ingest_cv_data.cpp  ingest_cv_data.hpp
src/file_reader/grid_file/: GridAccessTracker.cpp  GridAccessTracker.hpp  GridData.cpp  GridData.hpp  grid_filler_node.cpp  grid_filler_node.hpp  ingest_grid_data.cpp  ingest_grid_data.hpp
src/file_reader/hills_file/: HillsData.cpp  HillsData.hpp
src/fileblock_processing/: mod.rs
src/final_bias_reweight/: final_bias_reweight.cpp  final_bias_reweight.hpp
src/fragment_info/: FragmentInfo.cpp  FragmentInfo.hpp  FragmentInfo_Utils.cpp  FragmentInfo_Utils.hpp  parse_fragment_info_yaml.cpp  parse_fragment_info_yaml.hpp
src/fragment_reconstruct/: mod.rs
src/grid/: Grid.cpp  Grid.hpp  NDArray.cpp  NDArray.hpp  grid_filler_node.cpp  grid_filler_node.hpp  grid_utils.cpp  grid_utils.hpp  ingest_grid.cpp  ingest_grid.hpp
src/help/: help.cpp  help.hpp
src/progress/: progress_printer.cpp  progress_printer.hpp  progress_printer_nodes.hpp
src/reconstruct_from_fragments/: reconstruct_from_fragments.cpp  reconstruct_from_fragments.hpp  reconstruction_utils.cpp  reconstruction_utils.hpp  reconstruction_verynaive.cpp  reconstruction_verynaive.hpp
src/runfile/: runfile_fes_data.cpp  runfile_fes_data.hpp  runfile_general_section.cpp  runfile_general_section.hpp  runfile_parsed_tree.cpp  runfile_parsed_tree.hpp  runfile_reweight.cpp  runfile_reweight.hpp  runfile_search_directory_section.cpp  runfile_search_directory_section.hpp  runfile_steps.cpp  runfile_steps.hpp  runfile_steps_executor.cpp  runfile_steps_executor.hpp  yaml_frontend.cpp  yaml_frontend.hpp
src/steps/: step_block_analysis.cpp  step_block_analysis.hpp  step_fes_data.cpp  step_fes_data.hpp  step_reweight.cpp  step_reweight.hpp
src/unit_tests/: MiscFixture.cpp  MiscFixture.hpp  TempDirectory.cpp  TempDirectory.hpp  TempTextFile.cpp  TempTextFile.hpp  dummy_template_ts.cpp  frontend_common_ts.cpp  general_option_ts.cpp  main_test_suite.cpp
src/unit_tests/block_analysis/: cv_space_coverage_ts.cpp
src/unit_tests/common/: extract_from_string_ts.cpp  find_in_search_directory_ts.cpp  limiter_decrementer_node_ts.cpp  misc_ts.cpp  not_implemented_error_ts.cpp  yaml_utils_ts.cpp
src/unit_tests/export/: array_bindump_ts.cpp
src/unit_tests/file_reader/: field_function_heuristics_ts.cpp  file_header_reader_ts.cpp  parse_space_separated_values_ts.cpp  read_file_ts.cpp
src/unit_tests/file_reader/cv_file/: CVData_filler_node_ts.cpp  CVData_span_ts.cpp  CVData_ts.cpp  ingest_cv_data_ts.cpp
src/unit_tests/file_reader/grid_file/: GridAccessTracker_ts.cpp  GridData_ts.cpp  grid_filler_node_ts.cpp  ingest_grid_data_ts.cpp
src/unit_tests/grid/: grid_filler_node_ts.cpp  grid_ts.cpp  grid_utils_ts.cpp  ingest_grid_ts.cpp  ndarray_ts.cpp
src/unit_tests/progress/: progress_printer_node_ts.cpp  progress_printer_ts.cpp
src/unit_tests/runfile/: read_yaml_runfile_ts.cpp  runfile_fes_data_ts.cpp  runfile_general_ts.cpp  runfile_parsed_tree_ts.cpp  runfile_reweight_ts.cpp  runfile_search_directory_ts.cpp  runfile_steps_ts.cpp
system_tests/: st_load_fes_data.py  st_reconstruct_from_fragments.py  st_utils.py
