[package]
name = "fesutils"
version = "0.0.1"
authors = ["Eliane Briand <eliane@br.iand.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
indicatif = "0.14"
console = "0.9"
rayon = "1.1"
ndarray = { version = "0.13", features = ["serde", "rayon", "approx"] }
ndarray-stats = "0.3"
approx = "0.3.2"
noisy_float = "0.1.12"
num-traits = "0.2"
csv = "1.1"
